--- a/pages/index.yaml
+++ b/pages/index.yaml
@@ -74,8 +74,8 @@ body:       |
             <dt><i class="fa fa-slack"></i> Slack Channel</dt>
             <dd><a href="https://nd-cse.slack.com/messages/cse-34872-su20/">#cse-34872-su20</a></dd>
 
-            <dt><i class="fa fa-gitlab"></i> GitLab Group</dt>
-            <dd><a href="https://www.gitlab.com/nd-cse-34872-su20/">nd-cse-34872-su20</a></dd>
+            <dt><i class="fa fa-github"></i> GitHub Organization</dt>
+            <dd><a href="https://github.com/nd-cse-34872-su20">nd-cse-34872-su20</a></dd>
         </dl>
     </div>
 
@@ -299,7 +299,7 @@ body:       |
                 <p>
                 All <b>Readings</b> and <b>Challenges</b> are to be
                   submitted to your own <b>private</b> <a
-                  href="https://gitlab.com">GitLab</a> repository.  Unless
+                  href="https://github.com">GitHub</a> repository.  Unless
                   specified otherwise:
                 </p>
                 <p>
