index: add Zoom Meeting link

--- a/pages/index.yaml
+++ b/pages/index.yaml
@@ -69,7 +69,7 @@ body:       |
             <dd><a href="mailto:su20-cse-34872-01-group@nd.edu">su20-cse-34872-01-group@nd.edu</a></dd>
 
             <dt><i class="fa fa-video-camera"></i> Zoom Meeting</dt>
-            <dd><a href="https://notredame.zoom.us/j/91855026147"></a>918-5502-6147</dd>
+            <dd><a href="https://notredame.zoom.us/j/96051200559">960 5120 0559</a></dd>
 
             <dt><i class="fa fa-slack"></i> Slack Channel</dt>
             <dd><a href="https://nd-cse.slack.com/messages/cse-34872-su20/">#cse-34872-su20</a></dd>
