challenge01: better title
Thanks @AndroidKitKat

--- a/pages/challenge01.yaml
+++ b/pages/challenge01.yaml
@@ -1,4 +1,4 @@
-title:      "Challenge 01: Rotate Matrix"
+title:      "Challenge 01: The Matrix - Rotated"
 icon:       fa-code
 navigation: []
 internal:
