challenge04: fix linkedin link

--- a/pages/challenge04.yaml
+++ b/pages/challenge04.yaml
@@ -122,7 +122,7 @@ body:       |
     [curl]:             https://curl.haxx.se/
 
     [Systems Programming]:  https://www3.nd.edu/~pbui/teaching/cse.20289.sp20
-    [LinkedIn]: https://linkedin.com
+    [LinkedIn]: https://www.linkedin.com/in/samuelbattalio
 
     [^1]: You are welcome to do a [LeetCode] weekly challenge as one of your
     **External** programming contests for the course.
