Update @AndroidKitKat's OH

--- a/pages/index.yaml
+++ b/pages/index.yaml
@@ -100,7 +100,7 @@ body:       |
                 <dd>Michael Eisemann (<a href="mailto:meiseman@nd.edu">meiseman@nd.edu</a>)</dd>
 
                 <dt><i class="fa fa-life-ring"></i> Virtual Office Hours</dt>
-                <dd><strong>TBD</strong></dd>
+                <dd><strong>T/TH</strong> 7:30 - 9:00 PM EST, and by <strong>appointment</strong></dd>
             </dl>
             </div>
         </div>
