schedule: add zoom video for 2020-06-03

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -24,6 +24,9 @@
         items:
           - name:       Slides
             link:       https://docs.google.com/presentation/d/1YA_tGGdBGZzCoJ6b8xnEcmhWvT7O6CUIlh0cVJOBQRg/edit?usp=sharing
+          - name:       Zoom
+            link:       https://notredame.zoom.us/rec/share/_9VnKe7u7DlOXqvpz0_WBaUtR6LIX6a823NP-fIKnRmVWY7qkJ2MihL2Cz6GrxqU?startTime=1591226728000
+
 
       - date:           Sat 06/06
         assignments:
