--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -91,6 +91,9 @@
         topics:         Memoization
         assignments:
           - Reading 04
+        items:
+          - name:       Slides
+            link:       https://docs.google.com/presentation/d/1ZcxYauZ5Ib67sWU-mw0lAUfmPxBELT-NKV6rvSc725U/edit?usp=sharing
 
       - date:           Wed 06/24
         topics:         Table Building
