schedule: add zoom video for 2020-06-17

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -27,7 +27,6 @@
           - name:       Zoom
             link:       https://notredame.zoom.us/rec/share/_9VnKe7u7DlOXqvpz0_WBaUtR6LIX6a823NP-fIKnRmVWY7qkJ2MihL2Cz6GrxqU?startTime=1591226728000
 
-
       - date:           Sat 06/06
         assignments:
           - Challenge 01
@@ -80,6 +79,8 @@
             link:       https://docs.google.com/presentation/d/1RgIc1--uMo6JsdQ9VTjd0GzlB8_1bpu3iEczVQ-w07U/edit?usp=sharing
           - name:       Slides
             link:       https://docs.google.com/presentation/d/1p-u5tKjPOQd_hxzHgdFFPn4NmMm781hRpi_4kvH79rc/edit?usp=sharing
+          - name:       Zoom
+            link:       https://notredame.zoom.us/rec/share/_dRKfq_Z6mFIbYXz8kDGWvEaL4u-eaa82nNKrvIExRrC8ZeMiMVyuNs2Mu19qmgc?startTime=1592436196000
 
       - date:           Sat 06/19
         assignments:
