--- a/pages/challenge04.yaml
+++ b/pages/challenge04.yaml
@@ -84,7 +84,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge04               # Create and checkout challenge04 branch
 
@@ -93,7 +93,7 @@ body:       |
         $ git add challenge04/program.cpp           # Stage your changes
         $ git commit -m "challenge04: done"         # Commit your changes
 
-        $ git push -u origin challenge04            # Send changes to GitLab
+        $ git push -u origin challenge04            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
