--- a/pages/challenge15.yaml
+++ b/pages/challenge15.yaml
@@ -110,7 +110,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge15               # Create and checkout challenge15 branch
 
@@ -119,7 +119,7 @@ body:       |
         $ git add challenge15/program.cpp           # Stage your changes
         $ git commit -m "challenge15: done"         # Commit your changes
 
-        $ git push -u origin challenge15            # Send changes to GitLab
+        $ git push -u origin challenge15            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
