--- a/pages/challenge02.yaml
+++ b/pages/challenge02.yaml
@@ -71,7 +71,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge02               # Create and checkout challenge02 branch
 
@@ -80,7 +80,7 @@ body:       |
         $ git add challenge02/program.cpp           # Stage your changes
         $ git commit -m "challenge02: done"         # Commit your changes
 
-        $ git push -u origin challenge02            # Send changes to GitLab
+        $ git push -u origin challenge02            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
