--- a/pages/challenge03.yaml
+++ b/pages/challenge03.yaml
@@ -82,7 +82,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge03               # Create and checkout challenge03 branch
 
@@ -91,7 +91,7 @@ body:       |
         $ git add challenge03/program.cpp           # Stage your changes
         $ git commit -m "challenge03: done"         # Commit your changes
 
-        $ git push -u origin challenge03            # Send changes to GitLab
+        $ git push -u origin challenge03            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
