--- a/pages/challenge06.yaml
+++ b/pages/challenge06.yaml
@@ -95,7 +95,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge06               # Create and checkout challenge06 branch
 
@@ -104,7 +104,7 @@ body:       |
         $ git add challenge06/program.cpp           # Stage your changes
         $ git commit -m "challenge06: done"         # Commit your changes
 
-        $ git push -u origin challenge06            # Send changes to GitLab
+        $ git push -u origin challenge06            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
