--- a/pages/challenge07.yaml
+++ b/pages/challenge07.yaml
@@ -106,7 +106,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge07               # Create and checkout challenge07 branch
 
@@ -115,7 +115,7 @@ body:       |
         $ git add challenge07/program.cpp           # Stage your changes
         $ git commit -m "challenge07: done"         # Commit your changes
 
-        $ git push -u origin challenge07            # Send changes to GitLab
+        $ git push -u origin challenge07            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
