--- a/pages/challenge09.yaml
+++ b/pages/challenge09.yaml
@@ -72,7 +72,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge09               # Create and checkout challenge09 branch
 
@@ -81,7 +81,7 @@ body:       |
         $ git add challenge09/program.cpp           # Stage your changes
         $ git commit -m "challenge09: done"         # Commit your changes
 
-        $ git push -u origin challenge09            # Send changes to GitLab
+        $ git push -u origin challenge09            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
