--- a/pages/challenge12.yaml
+++ b/pages/challenge12.yaml
@@ -73,7 +73,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge12               # Create and checkout challenge12 branch
 
@@ -82,7 +82,7 @@ body:       |
         $ git add challenge12/program.cpp           # Stage your changes
         $ git commit -m "challenge12: done"         # Commit your changes
 
-        $ git push -u origin challenge12            # Send changes to GitLab
+        $ git push -u origin challenge12            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
