--- a/pages/challenge13.yaml
+++ b/pages/challenge13.yaml
@@ -64,7 +64,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge13               # Create and checkout challenge13 branch
 
@@ -73,7 +73,7 @@ body:       |
         $ git add challenge13/program.cpp           # Stage your changes
         $ git commit -m "challenge13: done"         # Commit your changes
 
-        $ git push -u origin challenge13            # Send changes to GitLab
+        $ git push -u origin challenge13            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
