--- a/pages/challenge14.yaml
+++ b/pages/challenge14.yaml
@@ -80,7 +80,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge14               # Create and checkout challenge14 branch
 
@@ -89,7 +89,7 @@ body:       |
         $ git add challenge14/program.cpp           # Stage your changes
         $ git commit -m "challenge14: done"         # Commit your changes
 
-        $ git push -u origin challenge14            # Send changes to GitLab
+        $ git push -u origin challenge14            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
