--- a/pages/challenge16.yaml
+++ b/pages/challenge16.yaml
@@ -111,7 +111,7 @@ body:       |
         :::bash
         $ cd path/to/cse-34872-su20-assignments     # Go to assignments repository
         $ git checkout master                       # Make sure we are on master
-        $ git pull --rebase                         # Pull any changes from GitLab
+        $ git pull --rebase                         # Pull any changes from GitHub
 
         $ git checkout -b challenge16               # Create and checkout challenge16 branch
 
@@ -120,7 +120,7 @@ body:       |
         $ git add challenge16/program.cpp           # Stage your changes
         $ git commit -m "challenge16: done"         # Commit your changes
 
-        $ git push -u origin challenge16            # Send changes to GitLab
+        $ git push -u origin challenge16            # Send changes to GitHub
 
     To check your code, you can use the `.scripts/submit.py` script or [curl]:
 
