schedule: add zoom video for 2020-07-15

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -177,6 +177,8 @@
         items:
           - name:       Slides
             link:       https://docs.google.com/presentation/d/15EmTmiD2NB6vdxyjv92lvW15odfyJxA-p7qzyA2ERQo/edit?usp=sharing
+          - name:       Zoom
+            link:       https://notredame.zoom.us/rec/share/38FFEa_yrWBIX4nE7HDSZKtwMa_4T6a8hnJM-KYFnUgwmzbIr_CAEbbQTJvTy6Ah?startTime=1594855526000
 
       - date:           Sat 07/18
         assignments:
